--- a/style/style.css
+++ b/style/style.css
@@ -1,192 +1,429 @@
-<<<<<<< HEAD
-.body{
-	text-align:center;
-	font-style:helvetica;
-	margin:0;
-}
-.row div{
-	
-	}
-.row{
-	justify-content:space-between;
-}
-.header{
-	height:200px;
-	background-color:#2e363f;
-	color:white;
-	text-align:center;	
-}
-.cvPic{
-	margin-top:40px;
-}
-
-
-.main{
-	height:300px;
-
-}
-.leftnav{
-	background-color: #fb8b31;
-	color:white;
-}
-ul{
-	list-style-type:none;
-	margin:0;
-	padding:0;
-	overflow:hidden;
-	background-color:#4e8eaa;
-	position:sticky;
-	top:0;
-	width:100%;
-}
-
-li{
-	float:left;
-}
-
-li a{
-	display:block;
-	color:white;
-	text-align:center;
-	padding:14px 16px;
-	text-decoration:none;
-	font-size:1.5em;
-}
-li a:hover{
-	background-color:#99999a;
-}
-.contact{
-	display:inline;
-	font-size:1.3em;
-	padding-left:10px;
-
-}
-.navlink{
-	color:white;
-=======
-@media screen and (min-width: 600px) {
-	.container{
+@media screen and (min-width: 801px) {
+	.navbar{
 		display:flex;
 	}
-}
-body{
-	margin:0;
-	font-style:helvetica;
-	color:white;
-	font-size:18px;
-}
+	.responsive-nav{
+	display:none;
+	}
+
+	.main-text {
+	  font-size: 6rem;
+	  top: 75%;
+	}
+	.sub-text{
+		font-size: 3rem;
+		top: 90%;
+	}
+	.store-main-text{
+		font-size:6rem;
+		top:20%;
+	}
+	.store-sub-text{
+		font-size:2.5rem;
+		top:40%;
+	}
+	.main-image-button{
+		font-size: 2rem;
+		top:100%;
+	}
+  }
+  
+  /* If the screen size is 800px wide or less */
+  @media screen and (max-width: 800px) {
+	  .navbar{
+		display:none;
+	}
+	 .responsive-nav{
+		 display:flex;
+	 }
+	.main-text {
+	  font-size: 3rem;
+	  top: 40%;
+	}
+	.sub-text{
+		font-size: 2rem;
+		top: 50%;
+	}
+	.store-main-text{
+		font-size:3rem;
+		top:10%;
+	}
+	.store-sub-text{
+		font-size:2rem;
+		top:20%;
+	}
+	.main-image-button{
+		font-size: 1.3rem;
+		top:57%;		
+	}
+  }
 
 
-.flexHead div{	
-	
-	width:100%;
-	height:200px;
-	text-align:center;
-}
-.flexHead{
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	align-content:center;
-	text-align:center;
 
-}	
-.flexPic{
-	background-color:#2e363f;
-	flex:1;
-	text-align:center;
-}
-.flexName{
-	background-color:#2e363f;
-	flex:2;
-	color:white;
-	text-align:left;
-	align-items:center;
-	justify-content:left;
-	
-}
-ul{
-	list-style-type:none;
+
+
+*{
 	margin:0;
 	padding:0;
-	overflow:hidden;
-	background-color:#4e8eaa;
-	position:sticky;
-	top:0;
+	box-sizing:border-box;
+	font-family:'open Sans',sans-serif;
+	
+}
+
+body{
+	height:100vh;
+	/*background-image: url("../hippie-girl-guitar-20597910.jpg");
+	*/
+	background-size:cover;
+	background-position:center;
+	margin:0;
+	padding:0;
+}
+.main-image{
+	
+	margin-left: auto;
+	margin-right: auto;
+	display:block;
+	max-width: 100%;
+	height:auto;
+	text-align: center;
+}
+.login-image{
+	
+	margin-left: auto;
+	margin-right: auto;
+	display:block;
+	max-width: 100%;
+	height:100vh;
+	text-align: center;
+}
+.store-main-image{
+	filter: brightness(50%);
+}
+
+
+.main-text{
+	position:absolute;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+	color:white;
+	font-family: inherit;
+}
+.sub-text{
+	position:absolute;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+	color:white;
+	font-family: inherit;
+}
+/*Store image */
+.store-main-text{
+	position:absolute;
+	left:3%;
+	color:white;
+	font-family:inherit;
+}
+.store-sub-text{
+	position:absolute;
+	left:3%;
+	color:white;
+	font-family:inherit;
+}
+.main-image-button{
+	position:absolute;
+	border:none;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+	color:#87a6b7;
+	font-family: inherit;
+	background-color: #984c3f;
+	border-radius: 20px;
+	text-align: center;
+	width:300px;
+	text-decoration: underline;
+}
+.main-image-button:hover{
+	color:white;
+	text-decoration: none;
+}
+
+
+
+
+
+
+
+header{
+	background-color: #d7b0ac;
+
+	/*
+	background-image: linear-gradient(rgba(0, 0, 0, 0.3),
+	rgba(0, 0, 0, 0.3)),url("../pictures/woman-learning-guitar-online-at-home-in-bedroom-XLGF00541.jpg");
+	*/
+	
+	height:auto;
+
+	color:white;
 	width:100%;
 }
-
+.pageSpacer{
+	height:80px;
+	width:100%;
+	background-color:white;
+}
 li{
-	float:left;
+	list-style: none;
+}
+a{
+	text-decoration: none;
+	font-size: 1rem;
+	color:white;
+}
+a:hover{
+	text-decoration: underline;
+	
+}
+.navbar{
+	width:100%;
+	height:60px;
+	max-width: 1200px;
+	margin:0  auto;
+	
+	align-items: center;
+	justify-content: space-around;
+}
+.navbar .links{
+	display: flex;
+	gap:3rem;
 }
 
-li a{
+.responsive-nav{
+	width:100%;
+	height:60px;
+	max-width: 1200px;
+	margin:0  auto;
+	
+	align-items: center;
+	justify-content: space-around;
+	}
+#responsive-menu{
+	
+	display:none;
+	flex-direction:column;
+	width:400px;
+	position: absolute;
+	z-index: 1;
+	
+	top:10%;
+	left:10%;
+	color:black;
+}
+
+#responsive-menu a{
+	color:black;
+	background-color:white;
 	display:block;
-	color:white;
+	width:400px;
 	text-align:center;
-	padding:14px 16px;
 	text-decoration:none;
-	font-size:1.5em;
 }
-li a:hover{
-	background-color:#99999a;
-}
-.active{
-	background-color:#4e8eaa;
+#responsive-menu a:hover{
+	background-color:grey;
 }
 
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-  color:#2e363f;
-}
-/* Sidebar/left column */
-.sidebar {
-  flex:0.5;
-  background-color: #fb8b31;
-  padding: 20px;
-  height:500px;
-  color:white;
-}
-/* Main column */
-.main {
-  flex: 2;
-  background-color: #fdfdfd;
-  padding: 20px;
 
+
+/* Login form*/
+.login-form{
+	background-color: white;
+	color:black;
+	position: absolute;
+	top:30%;
+	left:15%;
+	max-width: 400px;
+	height:auto;
+	border-radius: 10px;
 }
 
-.container{
+
+/*Login form*/
+
+#loginForm{
+	display:flex;
+	flex-direction:column;
+	color:black;
+	margin-top:0px;
+	
+}
+#loginForm label {
+	color:black;
+	text-align:left;
+	margin-top:20px;
+}
+#loginButton{
+	margin-top:20px;
+	margin-bottom: 20px;
+	border-radius: 15px;
+
+	color:green;
+}
+
+.input{
+	outline:none;
+	border:0;
+	background:#eee;
+	color:black;
+}
+.login-container .login-Title{
+	color:black;
+	text-align:center;
+	margin-top:10px;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+.login-form input{
+	padding:3px;
+	margin:2px;
+	border-radius:4px;
+}
+
+/*Join Page*/
+.join-body{
+	background-color: #87a6b7;
+	font-family: inherit;
+	color:wheat;
+	
+}
+.join-info{
+	margin-top:30px;
+	margin-left:50px;
+	color:white;
+}
+.join-info-column{
+	margin-top:20px;
+}
+
+/* Join Form*/
+#join-form{
+	width:400px;
+	height:500px;
+	display:flex;
+	flex-direction:column;
+	background-color:white;
+	padding:15px;
+	color:black;
+	border-radius:10px;
 
 	
 }
-.column h1{
+#join-form input{
+	padding:3px;
+	margin:2px;
+	border-radius:4px;
+}
+.join-container{
+	padding:30px;
+
+	
+
+}
+.terms{
+	display:flex;	
+}
+.termsText{
+	color:red;
+	text-decoration:underline;
+
+}
+#confirm-terms{
+	padding-left:5px;
+	padding-right:5px;
+}
+
+/*dropdown menus*/
+#courses-dropdown{
+	position:absolute;
+	top:60px;
+	background-color:white;
+	padding:10px;
+	margin:10px;
+	width: 400px;
+	height:auto;
+	z-index: 1;
+	border-radius:10px;
+	overflow:hidden;
+	color:black;
+
+	display:none;
+
+}
+#courses-dropdown a:hover{
+	text-decoration:underline;
+	cursor:pointer;
+
+}
+.drop-container{
+	display:flex;
+	justify-content:space-between;
+	flex-direction:column;
+}
+
+.img-container{
+	position:relative;
+	text-align:center;
+	padding:10px;
+}
+.img-container:hover #course-card-text{
+	display:block;
+	
+}
+.responsiveImg{
+	width: 100%;
+  height: auto;
+}
+
+#course-card-text{
+	position:absolute;
+	top:40%;
+	left:15%;
+	font-size:1.2rem;
+	display:none;
+	
+}
+
+.footer{
+	display:flex;
+	background-color:#d7b0ac;
+	color:white;
+	font-family:inherit;
+	padding:30px;
+	
+}
+.footer a{
+	font-size:1rem;
+	
+
+}
+.footer .fa{
+	padding-right:5px;
+	padding-left:5px;
+	font-size:1.3rem;
+}
+.info-group{
 	text-align:center;
 }
-.column{
-	flex:1;
-	text-align:left;
-	color:#2e363f;
-}
-.column div{
-	
+.fa-music{
+	font-size:2rem;
 }
 
-.iconColor{
-  color:#fdfdfd
+/*user validation*/
+#valid-user{
+	font-size:1rem;
+	display:none;
+}
+#invalid-user{
+	font-size:1rem;
+	display:none;
 }
 
-.cvPic{
-	margin:40;
-}
-.contact{
-	display:inline;
-	font-size:1.3em;
-	padding-left:10px;
-
-}
-.navlink{
-	color:white;
->>>>>>> 6d8d293259b8825bdcca7d89c095a9de0f2bd45a
-}
