--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+/* for screen size  800px wide or more */
+
 @media screen and (min-width: 801px) {
 	.navbar{
 		display:flex;
@@ -25,10 +27,11 @@
 	.main-image-button{
 		font-size: 2rem;
 		top:100%;
+		
 	}
   }
   
-  /* If the screen size is 800px wide or less */
+  /* for screen size  800px wide or less */
   @media screen and (max-width: 800px) {
 	  .navbar{
 		display:none;
@@ -72,8 +75,6 @@
 
 body{
 	height:100vh;
-	/*background-image: url("../hippie-girl-guitar-20597910.jpg");
-	*/
 	background-size:cover;
 	background-position:center;
 	margin:0;
@@ -129,18 +130,21 @@ body{
 	color:white;
 	font-family:inherit;
 }
+
+
 .main-image-button{
 	position:absolute;
 	border:none;
   	left: 50%;
   	transform: translate(-50%, -50%);
-	color:#87a6b7;
+	color:white;
 	font-family: inherit;
-	background-color: #984c3f;
-	border-radius: 20px;
-	text-align: center;
+	background-color: #d7b0ac;
+	border-radius: 10px;
 	width:300px;
 	text-decoration: underline;
+	height:3rem;
+	margin-top:5px;
 }
 .main-image-button:hover{
 	color:white;
@@ -166,14 +170,20 @@ header{
 	color:white;
 	width:100%;
 }
+
+/* pagespace to create white space*/
 .pageSpacer{
 	height:80px;
 	width:100%;
 	background-color:white;
 }
+
+/*style list item*/
 li{
 	list-style: none;
 }
+
+/*style link a*/
 a{
 	text-decoration: none;
 	font-size: 1rem;
@@ -181,8 +191,12 @@ a{
 }
 a:hover{
 	text-decoration: underline;
+	font-size:1.1rem;
+	transition:1s;
 	
 }
+
+/* Style the navbar*/
 .navbar{
 	width:100%;
 	height:60px;
@@ -197,6 +211,7 @@ a:hover{
 	gap:3rem;
 }
 
+/*style responsive nav bar*/
 .responsive-nav{
 	width:100%;
 	height:60px;
@@ -218,6 +233,8 @@ a:hover{
 	left:10%;
 	color:black;
 }
+
+
 
 #responsive-menu a{
 	color:black;
@@ -252,21 +269,25 @@ a:hover{
 	display:flex;
 	flex-direction:column;
 	color:black;
-	margin-top:0px;
+	margin-top:5px;
+	text-align:center;
 	
 }
-#loginForm label {
-	color:black;
-	text-align:left;
-	margin-top:20px;
+#loginForm input{
+	border:1px solid black;
+
+	margin-top:10px;
+	
 }
 #loginButton{
 	margin-top:20px;
 	margin-bottom: 20px;
-	border-radius: 15px;
+	border-radius: 4px;
 
 	color:green;
 }
+
+/*style input of forms*/
 
 .input{
 	outline:none;
@@ -321,6 +342,7 @@ a:hover{
 	padding:3px;
 	margin:2px;
 	border-radius:4px;
+	border:1px solid black;
 }
 .join-container{
 	padding:30px;
@@ -328,18 +350,7 @@ a:hover{
 	
 
 }
-.terms{
-	display:flex;	
-}
-.termsText{
-	color:red;
-	text-decoration:underline;
 
-}
-#confirm-terms{
-	padding-left:5px;
-	padding-right:5px;
-}
 
 /*dropdown menus*/
 #courses-dropdown{
@@ -351,16 +362,18 @@ a:hover{
 	width: 400px;
 	height:auto;
 	z-index: 1;
-	border-radius:10px;
+	border-radius:5px;
 	overflow:hidden;
 	color:black;
-
 	display:none;
-
 }
 #courses-dropdown a:hover{
-	text-decoration:underline;
+
 	cursor:pointer;
+	text-decoration:underline;
+	font-size:1.1rem;
+	transition:1s;
+	
 
 }
 .drop-container{
@@ -373,11 +386,14 @@ a:hover{
 	position:relative;
 	text-align:center;
 	padding:10px;
+	
 }
 .img-container:hover #course-card-text{
 	display:block;
 	
 }
+
+/*the course pictures in the store page should scale automatically*/
 .responsiveImg{
 	width: 100%;
   height: auto;
@@ -386,9 +402,11 @@ a:hover{
 #course-card-text{
 	position:absolute;
 	top:40%;
-	left:15%;
+	left:18%;
 	font-size:1.2rem;
 	display:none;
+	
+
 	
 }
 
